working at my mac

--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -3,18 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chana</title>
-  <style>
-    * { margin: 0; padding: 0; }
-    .w { max-width: 1200px; margin: 0 auto; }
-    .title { margin: 50px 0; font-size: 20px; text-align: center; color: rgba(0, 0, 0, .8); }
-    .author { font-size: 12px; text-align: right; margin-right: 20px; color: rgba(0, 0, 0, .6) }
-  </style>
+  <title>default</title>
 </head>
 <body>
-  <div class='w'>
-    <p class='title'>Coming soon or later..</p>
-    <p class='author'>-- by Chana</p>
-  </div>
+  <p class="title">该页面没用，首页请访问</p><a href="/index.html">/index.html</a>
+  <script type='module' src='/js/home/index.js'></script>
 </body>
 </html>
